--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: '**'
-    translation: /translations/%language%/
+    translation: /translations/%language%/%original_file_name%
